syntax = "proto3";

package lobby;

enum LobbyQueueAction {
  START = 0;
  WAIT = 1;
}

enum GameType {
  TWO_PLAYER = 0;
  THREE_PLAYER = 1;
  FOUR_PLAYER = 2;
  FIVE_PLAYER = 3;
}

message LobbyPlayer {
  string player_uid = 1;
  string name = 2;
  string public_uid = 3;
}

message LobbyStatistics {
  uint32 player_count = 1;
  uint32 game_count = 2;
}

message LobbyQueueRequest {
  LobbyPlayer player = 1;
  bool leave = 2;
  GameType game_type = 3;
}

message LobbyQueueResponse {
  string game_uid = 1;
  LobbyQueueAction action = 2;
}

message PublicLobbyPlayer {
  string public_uid = 1;
  string name = 2;
}


